Tg_wether_bot.ipynb

--- a/Tg_wether_bot.ipynb
+++ b/Tg_wether_bot.ipynb
@@ -38,8 +38,8 @@
         "import requests\n",
         "import json\n",
         "\n",
-        "bot = telebot.TeleBot('7239139204:AAGLeI7CdfqNc542mwbUnbb7dk2YzaLFAEY')\n",
-        "API = 'a82c5f0113d8c5906632c172e204891b'\n",
+        "bot = telebot.TeleBot('')\n",
+        "API = ''\n",
         "\n",
         "# Словарь с переводом описаний погоды на русский язык\n",
         "weather_descriptions = {\n",
